--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
     "@types/knex": "^0.16.1",
+    "@types/moment": "^2.13.0",
     "@types/nodemon": "^1.19.5",
     "@types/pg": "^8.10.9",
     "@types/winston": "^2.4.4",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "knex": "^3.0.1",
+    "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "winston": "^3.11.0"
