--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
+    "@types/express-winston": "^4.0.0",
     "@types/knex": "^0.16.1",
     "@types/moment": "^2.13.0",
     "@types/nodemon": "^1.19.5",
@@ -29,10 +30,13 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express-winston": "^4.2.0",
     "knex": "^3.0.1",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-express": "^0.1.1"
   }
 }
