--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^8.11.3",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "winston-express": "^0.1.1"
+    "winston-express": "^0.1.1",
+    "zod": "^3.22.4"
   }
 }
