--- a/package.json
+++ b/package.json
@@ -20,21 +20,29 @@
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.16",
+    "@types/crypto-js": "^4.2.1",
     "@types/dotenv": "^8.2.0",
     "@types/express-winston": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/knex": "^0.16.1",
     "@types/moment": "^2.13.0",
     "@types/nodemon": "^1.19.5",
     "@types/pg": "^8.10.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
     "winston-express": "^0.1.1",
