--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ jobs:
   cd:
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy Using ssh
+    - name: Deploying
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
